--- a/style.css
+++ b/style.css
@@ -58,12 +58,15 @@ img{
     overflow: auto;
 }
 .topcolumn {
-    float: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
-    
 } 
-.bottomcolumn {   
-    float: left;
+.bottomcolumn { 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
 }
 .fullcolumn {   
